minor style fixes of last page link and alignment

--- a/overmind/forum/static/forum/css/styles.css
+++ b/overmind/forum/static/forum/css/styles.css
@@ -568,18 +568,15 @@ p.solving {
       line-height: 1.3em; }
     .topic-list .topic-main .topic-meta {
       font-size: 12px; }
+      .topic-list .topic-main .topic-meta a {
+        font-size: inherit;
+        font-weight: normal; }
 
 .topic-list-actions {
   display: inline-block;
-  vertical-align: baseline;
-  /*
-  a:before {
-      content: '';
-      height: 100%;
-      border-left: 1px solid $colorDarkerGrey;
-      padding: 0 5px;
-      margin: 0 0 0 5px;
-  }*/ }
+  vertical-align: baseline; }
+  .topic-list-actions .btn-small {
+    vertical-align: bottom; }
 
 .search-filter {
   display: table-cell;
